--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mlm_api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon ./src/app.js"
   },
